--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Hi, Myself</h3>
             <h1>Mohamed Ansari</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum sunt deleniti at id qui debitis blanditiis, quod dolores est numquam vel, ipsam autem. Adipisci, animi.</p>
+            <p>Passionate Entry-Level Software Developer Eager to Contribute and Learn.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/mohamedansari14/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Mohamed-Ansari-14" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="home-img">
-            <img src="./asset/IMG_20230130_114249.jpg" alt="profile">
+            <img src="./asset/Profile.jpg" alt="profile">
         </div>
      </section>
 
@@ -54,7 +54,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Full Stack Developer</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In vero quisquam ea optio voluptates ratione hic illum voluptas at totam, non quos adipisci laborum, eligendi voluptatem nulla. Eos fugiat, dignissimos, perferendis at sunt amet expedita dolorem maxime assumenda obcaecati magni itaque officiis iste, dolore non alias consequatur voluptatum nostrum eveniet.</p>
+            <p>BCA Graduate with expertise in Core Java, J2EE, Web Technology and SQL acquired at QSpiders. Showcasing my enthusiasm for programming and a strong commitment to continuous learning. Eager to take on new challenges and expand my skill set.</p>
 
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
@@ -70,57 +70,71 @@
             <div class="skills-box">
                 <i class="fa-brands fa-java"></i>
                 <h3>Java</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatem iure voluptatibus illum doloribus inventore ea veniam sit quisquam et illo fugit obcaecati totam, excepturi, neque quaerat. Nostrum, excepturi rem!</p>
-                <a href="#" class="btn">Read More</a>
+                <p>Having Strong Knowledge in Core Java & JDBC, Hibernate, JPA, Spring Boot.</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-angular"></i>
                 <h3>Angular</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatem iure voluptatibus illum doloribus inventore ea veniam sit quisquam et illo fugit obcaecati totam, excepturi, neque quaerat. Nostrum, excepturi rem!</p>
-                <a href="#" class="btn">Read More</a>
+                <p>Having Knowledge in Angular Components and Modules.</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-js"></i>
                 <h3>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatem iure voluptatibus illum doloribus inventore ea veniam sit quisquam et illo fugit obcaecati totam, excepturi, neque quaerat. Nostrum, excepturi rem!</p>
-                <a href="#" class="btn">Read More</a>
+                <p>Having Knowledge in JavaScript and its Fundamentals.</p>
             </div>
 
-        </div>
+            <div class="skills-box">
+                <i class="fa-brands fa-html5"></i>
+                <h3>HTML</h3>
+                <p>Having Strong Knowledge in HTML.</p>
+            </div>
+
+            <div class="skills-box">
+                <i class="fa-brands fa-css3-alt"></i>
+                <h3>CSS</h3>
+                <p>Having Strong Knowledge in CSS.</p>
+            </div>
+
+            <div class="skills-box">
+                <i class="fa-duotone fa-solid fa-database"></i>
+                <h3>SQL</h3>
+                <p>Having Strong Knowledge in SQL. </p>
+            </div>
+        </div><br><br><br><br><br>
       </section>
 
       <!-- PortFolio Section -->
        <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Projects</span></h2>
+        <h2 class="heading">My <span>Projects</span></h2>
 
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="./asset/IMG_20230130_114249.jpg" alt="">
+                <img src="./asset/e-commerce.avif" class="port-box-img1" alt="image">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>E-Commerce Website</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/Mohamed-Ansari-14/E_Commerce_Application_Project" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./asset/IMG_20230130_114249.jpg" alt="">
+                <img src="./asset/hospital.jpeg" class="port-box-img2" alt="image">
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Hospital Management System</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/Mohamed-Ansari-14/Hospital_Management_System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="./asset/IMG_20230130_114249.jpg" alt="">
+                <img src="./asset/IMG_20230130_114249.jpg" class="port-box-img3" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
