--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <i class="fa-solid fa-bars" id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#home" class="nav-link">Home</a>
+            <a href="#about" class="nav-link">About</a>
+            <a href="#skills" class="nav-link">Skills</a>
+            <a href="#portfolio" class="nav-link">Projects</a>
+            <a href="#contact" class="nav-link">Contact</a>
         </nav>
     </div>
 
@@ -34,7 +34,6 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/mohamedansari14/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Mohamed-Ansari-14" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/i_am_innocent_._._/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
 
             <a href="./asset/Mohamed Ansari.pdf" target="_blank" class="btn">Download CV</a>
@@ -54,7 +53,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Full Stack Developer</h3>
-            <p>BCA Graduate with expertise in Core Java, J2EE, Web Technology and SQL acquired at QSpiders. Showcasing my enthusiasm for programming and a strong commitment to continuous learning. Eager to take on new challenges and expand my skill set.</p>
+            <p>I am a passionate and dedicated <b>BCA(COMPUTER APPLICATION)</b> graduate from Peri College of Arts and Science, where I completed my degree in 2023 with an impressive 8.0 CGPA. Following my graduation, I pursued further specialization by completing a comprehensive <b>JAVA FULL STACK</b> Course at Qspider Software Development Institute in April 2024. Showcasing my enthusiasm for programming and a strong commitment to continuous learning. Eager to take on new challenges and expand my skill set.</p>
 
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
@@ -70,7 +69,7 @@
             <div class="skills-box">
                 <i class="fa-brands fa-java"></i>
                 <h3>Java</h3>
-                <p>Having Strong Knowledge in Core Java & JDBC, Hibernate, JPA, Spring Boot.</p>
+                <p>Having Strong Knowledge in Core Java & JDBC, Hibernate JPA, Spring Boot.</p>
             </div>
 
             <div class="skills-box">
@@ -115,7 +114,8 @@
                 <img src="./asset/e-commerce.avif" class="port-box-img1" alt="image">
                 <div class="portfolio-layer">
                     <h4>E-Commerce Website</h4>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
+                    <p>Full Stack Spring Boot Project</p>
+                    <p>Technology used such as HTML, CSS, JSP, Hibernate with JPA, Spring Boot & MySQL.</p>
                     <a href="https://github.com/Mohamed-Ansari-14/E_Commerce_Application_Project" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -124,19 +124,20 @@
                 <img src="./asset/hospital.jpeg" class="port-box-img2" alt="image">
                 <div class="portfolio-layer">
                     <h4>Hospital Management System</h4>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
+                    <p>Backend Spring Boot Project</p>
+                    <p>Technology used such as Hibernate with JPA, Spring Boot & MySQL.</p>
                     <a href="https://github.com/Mohamed-Ansari-14/Hospital_Management_System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="./asset/IMG_20230130_114249.jpg" class="port-box-img3" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
                     <a href="#" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
 
         </div>
        </section>
