--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Port-Folio-Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./main.css">
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -19,7 +19,7 @@
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#skills" class="nav-link">Skills</a>
-            <a href="#portfolio" class="nav-link">Projects</a>
+            <a href="#project" class="nav-link">Projects</a>
             <a href="#contact" class="nav-link">Contact</a>
         </nav>
     </div>
@@ -37,6 +37,7 @@
             </div>
 
             <a href="./asset/Mohamed Ansari.pdf" target="_blank" class="btn">Download CV</a>
+            <a href="mailto:mohamedansari1410@gmail.com" target="_blank" class="btn" style="margin-left: 20px;">Hire Me</a>
         </div>
 
         <div class="home-img">
@@ -69,70 +70,70 @@
             <div class="skills-box">
                 <i class="fa-brands fa-java"></i>
                 <h3>Java</h3>
-                <p>Having Strong Knowledge in Core Java & JDBC, Hibernate JPA, Spring Boot.</p>
+                <p>Having Strong Knowledge in Spring-Boot</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-angular"></i>
                 <h3>Angular</h3>
-                <p>Having Knowledge in Angular Components and Modules.</p>
+                <p>Having Basic Knowledge in Angular 15</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-js"></i>
                 <h3>JavaScript</h3>
-                <p>Having Knowledge in JavaScript and its Fundamentals.</p>
+                <p>Having basic Knowledge in JavaScript</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-html5"></i>
                 <h3>HTML</h3>
-                <p>Having Strong Knowledge in HTML.</p>
+                <p>Having Strong Knowledge in HTML</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-brands fa-css3-alt"></i>
                 <h3>CSS</h3>
-                <p>Having Strong Knowledge in CSS.</p>
+                <p>Having Strong Knowledge in CSS</p>
             </div>
 
             <div class="skills-box">
                 <i class="fa-duotone fa-solid fa-database"></i>
                 <h3>SQL</h3>
-                <p>Having Strong Knowledge in SQL. </p>
+                <p>Having Strong Knowledge in SQL</p>
             </div>
         </div><br><br><br><br><br>
       </section>
 
-      <!-- PortFolio Section -->
-       <section class="portfolio" id="portfolio">
+      <!-- Project Section -->
+       <section class="project" id="project">
         <h2 class="heading">My <span>Projects</span></h2>
 
-        <div class="portfolio-container">
+        <div class="project-container">
 
-            <div class="portfolio-box">
+            <div class="project-box">
                 <img src="./asset/e-commerce.avif" class="port-box-img1" alt="image">
-                <div class="portfolio-layer">
+                <div class="project-layer">
                     <h4>E-Commerce Website</h4>
                     <p>Full Stack Spring Boot Project</p>
-                    <p>Technology used such as HTML, CSS, JSP, Hibernate with JPA, Spring Boot & MySQL.</p>
+                    <p>Technology used such as HTML, CSS, JSP, Hibernate with JPA, Spring-Boot 3 & MySQL.</p>
                     <a href="https://github.com/Mohamed-Ansari-14/E_Commerce_Application_Project" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
-            <div class="portfolio-box">
-                <img src="./asset/hospital.jpeg" class="port-box-img2" alt="image">
-                <div class="portfolio-layer">
-                    <h4>Hospital Management System</h4>
-                    <p>Backend Spring Boot Project</p>
-                    <p>Technology used such as Hibernate with JPA, Spring Boot & MySQL.</p>
-                    <a href="https://github.com/Mohamed-Ansari-14/Hospital_Management_System" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
+            <div class="project-box">
+                <img src="./asset/Hotel_Management_BG.jpg" class="port-box-img2" alt="image">
+                <div class="project-layer">
+                    <h4>Hotel Management System</h4>
+                    <p>Full Stack Spring Boot Project</p>
+                    <p>Technology used such as Angular 15, Spring-Boot 3 with JWT Authentication & MySQL.</p>
+                    <a href="https://github.com/Mohamed-Ansari-14/Hotel-Management-Full-Stack-Project" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
 
-            <!-- <div class="portfolio-box">
+            <!-- <div class="project-box">
                 <img src="./asset/IMG_20230130_114249.jpg" class="port-box-img3" alt="">
-                <div class="portfolio-layer">
+                <div class="project-layer">
                     <h4>Web Design</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A non, laborum deleniti exercitationem ex numquam est dolor accusantium quam impedit nam eos nobis ipsa soluta maiores sit voluptas inventore distinctio?</p>
                     <a href="#" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
